--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       </div>
       <div id="History">
-        <h5>History</h5>
+        <h5>History :</h5>
         <ul id="list" class="list"></ul>
       </div> 
          <div id="addtrans">
